--- a/src/app/othello-board/othello-board.component.scss
+++ b/src/app/othello-board/othello-board.component.scss
@@ -5,6 +5,10 @@ main {
 }
 
 app-square {
-    border: 1px gray solid;
+    border: 1px rgb(224, 201, 98) solid;
     height: 40px;
+}
+
+h3 {
+    text-align: center;
 }
