flip squares logic. Debug msg field.

--- a/src/app/othello-board/othello-board.component.html
+++ b/src/app/othello-board/othello-board.component.html
@@ -1,6 +1,7 @@
 <h3>Manuel's Othello Game</h3>
 <h5>Turn: {{whosturn}}</h5>
 <h5>Winner: {{winner}}</h5>
+<h5>Debug: {{dbgMsg}}</h5>
 <button mat-raised-button (click)="newGame()">New Game</button>
 <button mat-raised-button (click)="clearBoard()">Clear Board</button>
 <button mat-raised-button (click)="makeMove(1)">{{descr}}</button>
