--- a/src/app/square/square.component.scss
+++ b/src/app/square/square.component.scss
@@ -4,3 +4,15 @@ button {
     height: 100%;
     font-size: 2em !important;
 }
+// .material-icons {
+//     display: flex;
+//     align-items: center;
+//     justify-content: center;
+//     vertical-align: middle;
+// }
+
+.mat-icon {
+    display: block;
+    margin-left: auto;
+    margin-right: auto;
+}
