--- a/src/app/othello-board/othello-board.component.scss
+++ b/src/app/othello-board/othello-board.component.scss
@@ -14,4 +14,20 @@ app-square {
 
 h3 {
     text-align: center;
+    padding-bottom: 10px;
+}
+h5 {
+    text-align: center;
+}
+button {
+    line-height: 20px;
+    height: 20px;
+    background-color: green;
+    color: white;
+}
+.smallbutton {
+    vertical-align: middle;
+    width: 12px;
+    height: 12px;
+    font-size: 2em !important;
 }
